--- a/LookingBus Exercise/index.css
+++ b/LookingBus Exercise/index.css
@@ -7,5 +7,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
 
+h1{
+  text-align: center;
+}
+
+#map{
+  margin: 10px;
+  height: 500px;
+  width: 500px;
 }
